settings.css
/* --- PAGE CONTAINER --- */
.page-container {
    height: 100vh;
    display: flex;
    flex-direction: column;
    overflow: hidden; /* Prevents global browser scrollbars */
}

p {
  margin: 0;
  padding: 0;
}

/* --- TOP BAR --- */
.settings-titlebar {
    width: 100%;
    height: 40px;
    -webkit-app-region: drag;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 8px 12px;
    border-bottom: 1px solid var(--stroke-color);
    background: var(--topbar-fill);
    position: relative;
}

.settings-window-controls {
    display: flex;
    gap: 8px;
    align-items: center;
}

.settings-window-controls button {
    border: none;
    background: transparent;
    padding: 8px 0px;
    -webkit-app-region: no-drag;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
}

.settings-window-controls button img {
    image-rendering: pixelated;
    width: 24px;
    height: 24px;
    object-fit: contain;
    pointer-events: none;
    -webkit-user-drag: none;
}

/* --- SETTINGS LAYOUT --- */
.settings-layout {
    display: flex;
    flex: 1; /* Grows to fill all remaining vertical space */
    overflow: hidden; /* Keeps scroll barscontained inside children */
}

/* --- LEFT SIDE BAR --- */
.side-bar {
    width: 160px;
    padding: 16px;
    border-right: 1px solid var(--stroke-color);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.side-bar button {
    width: 100%;
    height: 32px;
    padding: 8px 12px;
    border: 1px solid var(--stroke-color); /* To be removed */
    border-radius: 8px;
    background: transparent;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 4px;
    cursor: pointer;
}

.side-bar button img {
    width: 20px;
    height: 20px;
    object-fit: contain;
}

/* --- RIGHT CONTENT AREA --- */
.main-bar {
    flex: 1;
    display: flex;
    overflow-y: auto; /* Enables vertical scrolling only inside the content area */
    padding: 24px;
    flex-direction: column;
    align-items: flex-start;
    gap: 16px;
}

.analytics-container {
    display: flex;
    flex-direction: row;
    gap: 16px;
}

.analytics-card {
    padding: 12px;
    gap: 2px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 152px;
    height: 102px;
    border-radius: 8px;
    background: linear-gradient(180deg, #FFF 0%, var(--sys-blue-grad) 100%);
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
}

#favorite_cat {
    background: linear-gradient(180deg, #FFF 0%, var(--sys-focused-grad) 100%);
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
}

.graph-container {
    width: 100%;
    gap: 8px;
    flex: 1;
    display: flex;
    flex-direction: column;
}

.graph {
    width: 100%;
    height: 100%;
    padding: 8px 16px;
    border-radius: 8px;
    background: #FFFFFF;
    /* gap: 8px;
    display: flex;
    flex-direction: column; */
}

.week-selection {
    width: 100%;
    padding: 4px;
    display: flex;
    justify-content: flex-end;
}

/* HIDDEN */
.hidden{
    display: none;
}

/* .nav-card {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 12px;
    width: 100%;
    background: transparent;
    border: none;
    cursor: pointer;
}

.top-card {
    padding: 16px 16px 0px 16px;
}

.bottom-card {
    padding: 0px 16px 16px 16px;
}

.nav-icon {
    width: 20px;
    height: 20px;
    object-fit: contain;
}

.bottom-nav {
    margin-top: auto;
}

.settings {
    display: flex;
    flex: 1;
    overflow: hidden;
}

.hidden{
    display: none;
} */

/* #dashboard-content h1 {
    font-size: 20px;
    padding: 0px 24px;
    margin-top: 32px;
    margin-bottom: 24px;
}

.analytics-card {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 153px;
    height: 102px;
    border-radius: 12px;
    background-color: #CBE7FF;
}

.analytics-content {
    display: flex;
    flex-direction: row;
    gap: 16px;
    padding: 0px 24px;
}

.card-data {
    font-family: 'Inter';
    font-size: 24px;
    font-weight: 700;
}

.about-header {
    padding: 32px 24px 24px 24px;
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.companions-section h1 {
    text-align: left;
    padding-left: 24px;
    margin-top: 0px;
    margin-bottom: 24px;
    font-size: 20px;
}

.companion-card {
    padding: 0px 24px;
    margin-bottom: 16px;
    display: flex;
    flex-direction: row;
}

.companion-text {
    margin: 10px 10px 10px 144px;
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.companion-attributes {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 16px;
}

.about-footer {
    margin-top: 24px;
    margin-bottom: 32px;
    text-align: center;
}

.footer-credit {
    margin-bottom: 16px;
}

.footer-link {
    display: flex;
    flex-direction: column;
    align-items: center;
} */

